public/stylesheets/style.css
/* font stylings */

@font-face {
  src: url(../font/Aspal.ttf);
  font-family: 'aspal';
}

p {
  font-family: 'Quicksand', sans-serif;
}

h2 {
  font-weight: bold;
  color: #BFF0CF;
  font-family: 'aspal';
  font-size: 45px;
}

/* Background Image */

body {
  background: url(../img/mountain.jpg);
  background-position: center;
  background-size: cover;
  background-size: auto;
  width: 100%;
  height: 100%;
}

/* Navigation */

nav {
  display: flex;
  justify-content: space-between;
  background-color: #3A5772;
}

/* Icon */

div.navbar-brand {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

img.logo {
  width: 100px;
}

h1 {
  color: #BFF0CF;
  font-size: 30px;
  font-family: 'aspal';
  font-weight: bold;
}

span.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  color: white;
}

#menuList {
  justify-content: flex-end;
  text-align: right;
}

a.nav-link {
  color: white;
  font-family: 'Quicksand', sans-serif;
  font-size: 20px;
  margin-left: 10px;
}

a.nav-link:hover {
  color: #BFF0CF;
}

/* End Navigation */

div.main-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* ----- general btn stylings ----- */
button.sober-btn,
button.login-btn,
button.article-btn {
  border-radius: 3px;
  height: 60px;
  background-color: #87A2BB;
  width: 65%;
  font-size: 20px;
  transition-duration: 0.5s;
  margin-top: 20px;
}

/* ---- Start Page ---- */

h4.startPage {
  font-size: 30px;
  margin-bottom: 40px;
}

.start-btn {
  width: 80%;
}

/* ---- Register Stylings ---- */

h4.date {
  font-size: 18px;
  margin-bottom: 20px;
}

/* ---- Login Stylings ---- */

/* back arrow */

button.fa-arrow-circle-left {
  font-size: 25px;
  float: left;
  color: #3A5772;
}

img.signin-logo {
  text-align: center;
  width: 200px;
  margin-bottom: 30px;
}

button.back {
  width: 25px;
  height: 25px;
  background-color: transparent;
  border: transparent;
}

h2.login-title {
  margin-bottom: 48px;
}

button.login-btn:hover,
img.icon {
  background-color: #3A5772;
  color: white;
}

div.checkbox {
  text-align: left;
}

/* Welcome Header */

h2.user-name {
  margin-top: 2rem;
}

/* Containers */

div.box {
  background-color: rgba(58, 87, 114, 0.4);
  text-align: center;
  width: 90vw;
  max-width: 500px;
  border-radius: 8px;
  margin-top: 2rem;
  padding: 32px;
  display: flex;
  flex-direction: column;
}

/* ---- Check in ---- */

h2.welcome-title,
h2.resources-title,
span.member-name {
  font-family: 'Quicksand', sans-serif;
  margin: 2rem;
  color: #3A5772;
}

h2.welcome-title {
  color: #87A2BB;
}

span.member-name {
  margin: 0;
}

/* div.mood-box {
  margin-top: 0rem;
} */

/* mood title */

h4 {
  color: white;
  font-family: 'Quicksand', sans-serif;
}

/* mood button styling */

div.mood-buttons {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: center;
}

p {
  margin-left: 12px;
  color: #3A5772;
}

button.mood {
  width: 3rem;
  border: 3px solid white;
  border-radius: 100px;
  color: white;
  font-size: 20px;
  transition-duration: 0.5s;
  margin-left: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

button.mood:hover,
button.sober-btn:hover,
button.article-btn:hover,
button.btn:focus,
button.active {
  background-color: #BFF0CF;
  border: 3px solid #3A5772;
  color: #3A5772;
}

button.mood:hover {
  font-size: 35px;
  height: 3rem;
}

/* member name styling  */

span.member-name {
  margin: 0;
  padding: 0;
}

h4.checkin-title {
  text-align: left;
}

input[type=text], input[type=password], input[type=date] {
  width: 100%;
  margin-bottom: 22px;
  padding: 16px;
  background-color: #ecf2f4;
  border: none;
  color: rgb(0, 0, 0);
}

label {
  color: #fff;
}

input[type=checkbox] {
  height: 15px;
  width: 15px;
}

/* ---- Resources ---- */

.resource-box, .journal-box {
  max-width: 800px;
}

/* title */

h2.resources-title {
  margin-bottom: 0px;
}

article {
  border: 2px solid white;
  border-radius: 10px;
  margin: 20px;
  padding: 10px;
}

/* article description */

p {
  color: white;
  font-size: 15px;
}

/* article button */

.article-btn {
  margin-top: 5px;
}

/* ---- Counter Stylings ---- */

/* Top of the page */
div.mtn-logo-top {
  height: 8vw;
}

img.mtn-logo {
  margin-top: 5px;;
  height: 100%;
}

/* The counter with chart */
#counter {
  max-width: 450px;
  margin: 35px auto;
  opacity: 0.9;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  position: relative;
}

#responsive-chart, div.chart-inner{
  grid-column: 2/span 10;
  grid-row: 1;
  z-index: 2;
}

#mtn-img  {
  grid-column: 4/span 6;
  grid-row: 1;
  width: 100%;
  z-index: 1;
}

/* For the overlay behind the mtn image */
div.chart-inner {
  grid-column: 3/span 8;
  grid-row: 1;
  background-color: #3a5772;
  height: 90%;
  z-index: 0;
  margin: 15px;
}

/* for the days sober */
p.days-sober {
  grid-column: 6/span 2;
  grid-row: 1;
  z-index: 3;
  margin-top: 250%;
  font-size: calc(12px + 1vw);
  color: yellow;
}

/*  For days/etc until next badge */
div.days-until {
  background-color: #3a57729c;
  width: 65%;
  border-radius: 10px;
  margin-top: 60px;
  margin-bottom: 60px;
}

div.days-until p {
  color: white;
  margin: .25rem 0;
  font-size: 3vw;
  width: 100%;
}

span#time-left {
  color: #BFF0CF;
}

span.star {
  color: yellow;
  font-size: 5vw;
  margin-left: 10px;
}

/* Quote box */
div.quote-container {
  color: white;
  background-color: #bff0cf9c;
  width: 65%;
  border-radius: 10px;
}

div.quote-container > p {
  color: white;
  font-size: 3.5vw;
}

p.quote {
  font-style: italic;
}

footer {
  background-color: #87A2BB;
}

footer > .container {
  padding-right: 15px;
  padding-left: 15px;
  color: white;
}

/* Footer icons */
img.icon {
  max-width: 40px;
  width: 5vw;
}

img.icon-connect {
  max-width: 50px;
  width: 7vw;
}

/* media queries */
@media screen and (min-width: 400px) {
  div.days-until {
      margin-top: 30px;
      margin-bottom: 30px;
  }

}

@media screen and (min-width: 768px) {
  div.mtn-logo-top {
      height: 4vw;
  }

  div.days-until > p {
      font-size: 24px;
  }

  div.quote-container > p {
      font-size: 2vw;
  }
}

@media screen and (min-width: 600px) {
  div.mtn-logo-top {
      height: 5vw;
  }

  div.days-until, div.quote-container {
      width: 50%;
  }

  div.days-until p {
      font-size: 2.5vw;
  }

  div.quote-container > p {
      font-size: 3vw;
  }
}

@media only screen and (min-device-width: 280px) and (max-device-width: 500px) and (-webkit-min-device-pixel-ratio: 2) {
  h2 {
    margin-top: 10px;
    font-size: 10vw;
  }
  .box {
    width: 90vw;
  }
  input[type=text] {
    margin-bottom: 10px;
    font-size: 14px;
    padding-bottom: 20px;
  }
  .btn {
    height: 45px;
    font-size: 18px;
  }
}

/* **** for the COUNTER page **** */
p.days-sober, p.quote, p.quote-author {
  font-family: 'Quicksand', sans-serif;
}

/* The counter with chart */
#counter {
  max-width: 450px;
  margin: 35px auto;
  opacity: 0.9;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  position: relative;
}

#responsive-chart, div.chart-inner{
  grid-column: 2/span 10;
  grid-row: 1;
  z-index: 2;
}

#mtn-img  {
  grid-column: 4/span 6;
  grid-row: 1;
  width: 100%;
  z-index: 1;
}

/* For the overlay behind the mtn image */
div.chart-inner {
  grid-column: 3/span 8;
  grid-row: 1;
  background-color: #3a5772;
  height: 90%;
  z-index: 0;
  margin: 15px;
}

/* for the days sober */
p.days-sober {
  grid-column: 6/span 2;
  grid-row: 1;
  z-index: 3;
  margin-top: 220%;
  font-size: calc(12px + .8vw);
  color: yellow;
  line-height: 0;
}

p.continuous-days {
  grid-row: 1;
  grid-column: 5/span 4;
  z-index: 3;
  margin-top: 135%;
  font-size: calc(9px + .9vw);
  color: yellow;
}

/*  For days/etc until next badge */
div.days-until {
  background-color: #3a57729c;
  width: 65%;
  border-radius: 10px;
  margin-top: 60px;
  margin-bottom: 60px;
}

div.days-until p {
  margin: .25rem 0;
  font-size: calc(14px + .7vw);
  width: 100%;
}

span#time-left {
  color: #BFF0CF;
}

span.star {
  color: yellow;
  font-size: calc(16px + .7vw);
  margin-left: 10px;
}

/* Quote box */
div.quote-container {
  color: white;
  background-color: #bff0cfab;
  width: 65%;
  border-radius: 10px;
  padding: 10px;
}

div.quote-container > p {
  color: white;
  font-size: calc(14px + .6vw)
}

p.quote {
  font-style: italic;
}

footer {
  background-color: #87A2BB;
}

footer > .container {
  padding-right: 15px;
  padding-left: 15px;
  color: white;
}

/* Footer icons */
img.icon {
  max-width: 40px;
  width: 5vw;
}

img.icon-connect {
  max-width: 50px;
  width: 7vw;
}

/* media queries */
@media screen and (min-width: 400px) {
  div.days-until {
      margin-top: 30px;
      margin-bottom: 30px;
  }
}

@media screen and (min-width: 600px) {
  div.days-until, div.quote-container {
      width: 50%;
  }
}

